--- a/Piano/guitar.css
+++ b/Piano/guitar.css
@@ -1,9 +1,41 @@
+* { 
+    box-sizing: border-box;
+  }
+    
+
 header {
-    color: green;
+    /* color:white; */
     display: flex;
     justify-content: left;
-    font-family: futura;
+    /* font-family: "Source Sans Pro", sans-serif; */
+    color: rgba(236, 227, 227, 0.8);
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: normal;
+    overflow-wrap: break-word;
+    font-kerning: normal;
+    font-feature-settings: "kern", "liga", "clig", "calt";
+    background: url('img/Flood Tuning_-41.jpg') no-repeat top center ;
+    background-size: cover;
+    overflow: hidden;
 }
+
+body {
+    /* color: #fff;
+    font-size: 1em;
+    font-family: "Gotham Rounded A", "Gotham Rounded B", "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding-top: 0em;
+    background-color: #42b4d6;
+    padding-bottom: 1em;
+    border: 1px;
+    margin-top: 0em; */
+
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    color: #222;
+    background: #f7f5f0;
+  }
 
 nav {
     display: flex;
@@ -17,9 +49,17 @@ nav {
 } */
 
 .tuning {
-    width: 100%; /* width of container */
-    height: 10em; /* height of container */
+    width: 100%; 
+    height: 9em; 
     object-fit: cover;
+    object-position: bottom;
+    padding-top: 0px; 
+    
+    /* width: 100%;
+    min-height: 30px;
+    padding: 10px;
+    position: fixed;
+    text-align: center; */
     
     
 }
