--- a/Piano/guitar.css
+++ b/Piano/guitar.css
@@ -34,11 +34,19 @@ body {
     text-align: center;
     font-family: 'Roboto', sans-serif;
     color: #222;
-    background: #f7f5f0;
+    /* background: #f7f5f0; */
   }
 
-nav {
-    display: flex;
+.intro {
+    /* border-width: 5px;
+    border-color: blue;
+    background-color: crimson; */
+}
+
+nav ul {
+    display: flexbox;
+    position: relative;
+    right: 10em;
     justify-content: right;
     font-family: futura;
 }
@@ -72,3 +80,120 @@ nav {
   
    
 }
+
+.mainpic img {
+    width: 50%; 
+    height: 18em; 
+    object-fit: cover;
+    object-position: 200% 70%;
+    padding-top: 0px; 
+    border-radius: 60%;
+}
+
+.contact {
+    padding: 25px;
+}
+
+h2 {
+    padding: 5px;
+    border: 5px;
+}
+
+/* Practice Button Nav code */
+
+
+
+.container {
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  
+  /* Rotate first bar */
+  .change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-9px, 6px) ;
+  }
+  
+  /* Fade out the second bar */
+  .change .bar2 {
+    opacity: 0;
+  }
+  
+  /* Rotate last bar */
+  .change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
+  }
+
+
+
+
+
+
+
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #3498DB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    right: 5em;
+    border-radius: 50%;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: fixed;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: fixed;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+  
+
+  /* Change color of dropdown links on hover */
+  @media screen and (min-width: 720px) {
+  
+
+  
+  }
+  
+  
